--- a/index.html
+++ b/index.html
@@ -124,17 +124,17 @@
    </div> 
  </div>
  </div>
- </div>
- </center>
  <div data-role="footer" align="center" data-theme="a" data-position="fixed">
 <h4>PAOLA CONSTANZA ELGUEA PEREZ</h4>
 <img src="res/android/mdpi.png" width="56" height="46">
 </div>
 </div>
 
+ <!-- Pagina 2 -->
 <div data-role="page" id="Pagina2" data-add-back-btn="true" data-theme="a">
 	<div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="a">
  <h1>PROGRAMACION</h1>
+ </div>
  <!-- Start WOWSlider.com BODY section -->
 <div id="wowslider-container2">
 <div class="ws_images"><ul>
@@ -158,6 +158,7 @@
 <script type="text/javascript" src="engine2/wowslider.js"></script>
 <script type="text/javascript" src="engine2/script.js"></script>
 <!-- End WOWSlider.com BODY section -->
+<div>
    <h2>TÉCNICO EN PROGRAMACIÓN<br>
 Persona con conocimientos, habilidades y actitudes, capaz de ingresar a empresas de desarrollo de software, diseño gráfico, mantenimiento, outsourcing.<br>
 COMPETENCIAS PROFESIONALES<br></h2>
@@ -181,16 +182,18 @@ Analista de programas de cómputo<br>
  Escuelas de computación del sector público<br>
  </h2>
  </div>
- </div>
+
  <div data-role="footer" align="center" data-theme="a" data-position="fixed">
 <h4>PAOLA CONSTANZA ELGUEA PEREZ</h4>
 <img src="res/android/mdpi.png" width="56" height="46">
 </div>
 </div>
 
+ <!-- Pagina 3 -->
 <div data-role="page" id="Pagina3" data-add-back-btn="true" data-theme="a">
 	<div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="a">
     <h1>MECANICA INDUSTRIAL</h1>
+    </div>
     <!-- Start WOWSlider.com BODY section -->
 <div id="wowslider-container3">
 <div class="ws_images"><ul>
@@ -214,6 +217,8 @@ Analista de programas de cómputo<br>
 <script type="text/javascript" src="engine3/wowslider.js"></script>
 <script type="text/javascript" src="engine3/script.js"></script>
 <!-- End WOWSlider.com BODY section -->
+<div>
+
  <h2>TÉCNICO EN MECÁNICA INDUSTRIAL<br>
 
 Profesionista que da mantenimiento a los sistemas de transmisión de potencia utilizando las máquinas herramientas convencionales, de control numérico, máquinas de soldar con arco eléctrico y oxigas auxiliándose de los procesos de ajuste de piezas mecánicas.<br>
@@ -235,16 +240,18 @@ Durante el proceso de formación de los cinco módulos, el estudiante desarrolla
 Industrias de transformación y procesos como: Textiles, del plástico, petroleras, metalmecánica, automotriz, pesqueras, mineras, siderúrgicas, agrícolas, alimenticia, química, de muebles, forestal, papelera, gráfica y en general todo tipo de industria de la producción y manufacturera que utilice maquinaria entre otras.
 </h2>
 </div>
-</div>
+
  <div data-role="footer" align="center" data-theme="a" data-position="fixed">
 <h4>PAOLA CONSTANZA ELGUEA PEREZ</h4>
 <img src="res/android/mdpi.png" width="56" height="46">
 </div>
 </div>
 
+ <!-- Pagina 4 -->
 <div data-role="page" id="Pagina4" data-add-back-btn="true" data-theme="a">
 	<div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="a">
     <h1>ELECTRICIDAD</h1>
+    </div>
     <!-- Start WOWSlider.com BODY section -->
 <div id="wowslider-container4">
 <div class="ws_images"><ul>
@@ -266,6 +273,7 @@ Industrias de transformación y procesos como: Textiles, del plástico, petroler
 <script type="text/javascript" src="engine4/wowslider.js"></script>
 <script type="text/javascript" src="engine4/script.js"></script>
 <!-- End WOWSlider.com BODY section -->
+<div>
     <h2>TÉCNICO EN ELECTRICIDAD<br>
 
 La carrera de Técnico en Electricidad permite al estudiante sustentar la demanda de ocupación de Técnicos Electricistas en el sector productivo y de servicios, capaz de diseñar y realizar instalaciones eléctricas residenciales y comerciales, así como proporcionar mantenimiento a máquinas eléctricas.<br>
@@ -287,16 +295,19 @@ OPORTUNIDADES DE INSERCIÓN LABORAL.<br>
 Todas estas competencias posibilitan al egresado su incorporación al mundo laboral o desarrollar procesos productivos independientes, de acuerdo con sus intereses profesionales o las necesidades en su entorno social.<br>
 </h2>
 </div>
-</div>
+
 <div data-role="footer" align="center" data-theme="a" data-position="fixed">
 <h4>PAOLA CONSTANZA ELGUEA PEREZ</h4>
 <img src="res/android/mdpi.png" width="56" height="46">
 </div>
 </div>
 
+ <!-- Pagina 5 -->
 <div data-role="page" id="Pagina5" data-add-back-btn="true" data-theme="a">
 	<div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="a">
-<h1>LOGISTICA</h1><br>
+<h1>LOGISTICA</h1>
+</div>
+
 <!-- Start WOWSlider.com BODY section -->
 <div id="wowslider-container5">
 <div class="ws_images"><ul>
@@ -316,6 +327,7 @@ Todas estas competencias posibilitan al egresado su incorporación al mundo labo
 <script type="text/javascript" src="engine5/wowslider.js"></script>
 <script type="text/javascript" src="engine5/script.js"></script>
 <!-- End WOWSlider.com BODY section -->
+<div>
 <h2>TÉCNICO EN LOGISTICA<br>
 
 Ofrece las competencias profesionales que permiten al estudiante realizar actividades dirigidas a la administración de bienes, planificando los suministros destinados al almacenamiento de manera manual y electrónica, la organización de los nodos logísticos para el transporte de mercancías, así como proveer los servicios y atención al cliente sobre los movimientos y los costos de la cadena logística.<br>
@@ -342,7 +354,7 @@ Relaciones interpersonales<br>
 
 Nuestro país presenta una amplia diversidad de procesos de producción, desde los que utilizan tecnología moderna, hasta sistemas tradicionales; este hecho contribuye a diversificar las ocupaciones, los Comités interinstitucionales de Formación Profesional decidieron utilizar los siguientes: Sectores industriales, comerciales y de servicios, públicos o privados: Escuelas, constructoras, fábricas, centros comerciales, hospitales, inmobiliarias, hoteles, instituciones de crédito, despachos contables y tiendas de autoservicio. Autoempleo</h2>
 </div>
-</div>
+
 <div data-role="footer" align="center" data-theme="a" data-position="fixed">
 <h4>PAOLA CONSTANZA ELGUEA PEREZ</h4>
 <img src="res/android/mdpi.png" width="56" height="46">
